# QD_Builder

./: .gitignore  README.md  environment.yml  license  pyproject.toml  setup.py
src/builder/: __init__.py  __main__.py  analysis.py  chemistry.py  cleanup.py  config.py  constants.py  facets.py  geometry.py  io_utils.py  main.py  nc_types.py  passivation.py
